2022-11-02 Roy Hills <royhills@hotmail.com>

	* arp-scan.c, arp-scan.1.dist: Change --format short option character
	  from -k to -F. The -F character became free when the --iabfile
	  option was removed, and is a more logical choice.

	* arp-scan.c, check-decode: Print warning message for unavailable
	  --format fields in addition to unknown fields.  Updated test.

2022-11-01 Roy Hills <royhills@hotmail.com>

	* arp-scan.h: Increase HASH_TABLE_SIZE from 50,000 to 70,000 due to
	  addition of IEEE MA-M and MA-S registries.  ieee-oui.txt currently
	  contains 47028 entries of 70000 (67.2%).

	* get-oui.1: renamed to get-oui.1.dist with PKGDATADIR substitution.

	* check-ieee-reg: New file to test IEEE registry lookup.

	* Makefile.am: Build man page "get-oui.1" from "get-oui.dist", added
	  check-ieee-reg test.

	* get-oui: Changed IEEE URLs from http to https. This avoids an HTTP
	  redirect from the http to https site.

	* ieee-oui.txt: Updated from IEEE website.

	* strlcat.c: removed. arp-scan only uses strlcpy(), so we don't need
	  to ship replacement source code for strcat() as well.

	* configure.ac, strlcpy.h: Removed references to strlcat.

2022-10-31 Roy Hills <royhills@hotmail.com>

	* get-oui: Changed to fetch registry data from all four IEEE registries
	  (MA-L, MA-M, MA-S and IAB), format appropriately for arp-scan, and
	  concatenate into ieee-oui.
	* get-iab: No longer needed. Replaced with stub script that calls die.
	* Makefile.am, check-decode, check-host-list: Removed get-iab / iabfile
	  references.
	* arp-scan.c, arp-scan.h: Removed --iabfile option.
	* README.md, arp-scan.1.dist, get-oui.1, mac-vendor.5, mac-vendor.txt:
	  Update text to reflect changes.
	* get-iab.1: Removed. No longer needed.
	* ieee-iab.txt: Removed. No longer needed.
	* ieee-oui.txt: Updated to new combined registry format.

2022-10-30 Roy Hills <royhills@hotmail.com>

	* Makefile.am: Build man page "arp-scan.1" from "arp-scan.dist"